plugins {
    id 'org.springframework.boot' version '2.3.5.RELEASE'
    id 'io.spring.dependency-management' version '1.0.10.RELEASE'
    id 'java'
    id "com.palantir.docker" version "0.25.0"
    id "com.palantir.docker-run" version "0.25.0"
}

group 'dev.wilix'
version '0.0.1-alpha'

sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11
compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"
javadoc.options.encoding = 'UTF-8'

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter'

    implementation group: 'com.unboundid', name: 'unboundid-ldapsdk', version: '5.1.1'

    implementation group: 'com.google.guava', name: 'guava', version: '30.0-jre'

    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.11.3'

    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.9'


    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}

test {
    useJUnitPlatform()
}

docker {
    name = "crm-ldap-facade:$version"
    files(tasks.getByName("bootJar").outputs)
    tag("version", "$version")
    pull(true)
    setDockerfile(file("Dockerfile"))
}

dockerRun {
    name = rootProject.name
    image = "crm-ldap-facade:$version"
    ports("10636:10636")
    env(['LISTENER_SSLENABLED':'false'])
}
